--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,10 @@ h1 {
     font-size: 24px;
     margin-bottom: 20px;
 }
+div {
+    width: 900px;
+    margin: 40px auto;	
+}
 p {
 	margin: 0 0 15px;
 }
