--- a/css/legal.css
+++ b/css/legal.css
@@ -1,5 +1,5 @@
 
-.legal { margin: 114px auto 140px; }
+.legal { margin: 114px auto 140px; width: 62%; }
 
 .legal-nav { margin-top: 75px; padding-top: 13px; display: flex; justify-content: center; border-top: 1px solid #eee; text-align: center; }
 	.legal-nav a { padding: 16px 18px; position: relative; display: inline-block; color: rgba(0,0,0,0.45); font-size: 15px; text-decoration: none; }
